tests/neg-custom-args/captures/vars.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/vars.scala:11:24 -----------------------------------------
11 |  val z2c: () -> Unit = z2  // error
   |                        ^^
   |                        Found:    {z2} () -> Unit
   |                        Required: () -> Unit
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/vars.scala:15:10 -----------------------------------------
15 |  val u = a  // error
   |          ^
   |          Found:    (a : box {*} String -> String)
   |          Required: {*} (x$0: String) -> String
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/vars.scala:16:2 ---------------------------------------------------------------
16 |  a("")  // error
   |  ^
   |  box {*} String -> String cannot be box-converted to a type that can be selected or applied
   |  since one of their capture sets contains the root capability `*`
-- Error: tests/neg-custom-args/captures/vars.scala:17:4 ---------------------------------------------------------------
17 |  b.head // error
   |  ^^^^^^
   |  The expression's type box {*} String -> String is not allowed to capture the root capability `*`.
   |  This usually means that a capability persists longer than its allowed lifetime.
-- Error: tests/neg-custom-args/captures/vars.scala:32:8 ---------------------------------------------------------------
32 |  local { cap3 => // error
   |  ^
   |  The expression's type box {x$0, *} (x$0: String) -> String is not allowed to capture the root capability `*`.
   |  This usually means that a capability persists longer than its allowed lifetime.
33 |    def g(x: String): String = if cap3 == cap3 then "" else "a"
34 |    g
35 |  }
